--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "install": "^0.13.0",
     "next-i18next": "^13.1.5",
     "npm": "^9.5.0",
